
Mon Jan 19 9:56:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gnubg.c, gtkboard.c, gtkchequer.c, gtkgame.c, gtkgame.h,
	gtkprefs.c, gtktoolbar.c: More 3d quick draw option stuff

Fri Jan 16 9:56:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* set.c, render.c, play.c, renderprefs.c, gtkprefs.c, gtkoptions.c,
	gtkgame.c, gtkboard.c: 3d quick draw option

Fri Jan 16 9:56:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* bearoff.c, show.c, progress.c: Removed some build warnings

Sun Jan  4 13:35:16 2004  Joern Thyssen  <jth@gnubg.org>

	* gtkchequer.c (CreateMoveList): remove the old layout version as
	the new can do both versions.
	(reported by Nardy)

Sun Jan  4 11:05:03 2004  Joern Thyssen  <jth@gnubg.org>

	The hint dialog will now always show the w/g/bg's whereas the panelled
	analysis only shows the equity/MWC. Pressing the "details" button 
	will pop up the hint dialog.

	* gtkchequer.c: restore some of the old non-panel code

Sun Jan 4 2004 00:51:45   Jim Segrave <jes@jes-2.demon.nl>

	* makebearoff.c: va_start needs stdarg.h
	
Sat Jan  3 16:53:09 2004  Oystein Johansen <oystein@gnubg.org>

        * makebearoff.c: Add progress bar. (Win32 only)
	* makebearoff.rc: New file.

Sat Jan  3 14:32:46 2004  Joern Thyssen  <jth@gnubg.org>

	Some updates to EPCs:

	* gnubg.c (EPC): return mu and sigma if requested.
	* gnubg.c (ShowEPC): calculate GWC from mu and sigma.
	* onechequer.c (GWCFromMuSigma, GWCFromDist): new funtions.
	

Sat Jan  3 01:02:49 2004  Joern Thyssen  <jth@gnubg.org>

	* configure.in: look for socklen_t.

Fri Jan  2 19:23:09 2004  Oystein Johansen <oystein@gnubg.org>

        * render.c (RenderDice): Redesign the dice in the 2D board.
	* gtkboard.c (DrawDie): Redesign the dice in the dice selection
	dialog.

Fri Jan  2 12:14:52 2004  Joern Thyssen  <jth@gnubg.org>

	Use one chequer racing formulae from Zadeh & Kobliska, Management
	Science, 1977.

	* onechequer.c (GWCFromPipCount): new function. Delete obsolete